--- a/position.html
+++ b/position.html
@@ -8,10 +8,10 @@
     <link rel="stylesheet" href="./assets/style/styles.css">
 </head>
 <body>
-    <div class="block">
-        <div class="block1">Block1</div>
-        <div class="block2">Block2</div>
-        <div class="block3">Block3</div>
+    <div class="main">
+        <div class="meniu">
+            
+        </div>
     </div>
 </body>
 </html>
